Add QoS profile to publisher and subscriber

--- a/src/week1_pkg/setup.cfg
+++ b/src/week1_pkg/setup.cfg
@@ -1,4 +1,9 @@
 [develop]
 script_dir=$base/lib/week1_pkg
+
 [install]
 install_scripts=$base/lib/week1_pkg
+
+[options.package_data]
+week1_pkg = launch/*.py
+
